# NexusBot

./: .gitignore  README.md  app.py  credentials.py  pyproject.toml  requirements.txt
.github/workflows/: github-actions-ec2.yml
