[tool.poetry]
name = "nexusbot"
version = "0.1.0"
description = ""
authors = ["ryanp <ryanpey>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
python-telegram-bot="13.14"
supabase="2.9.0"
urllib3 = "1.26.20" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

